# supercoder

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: python.yml
scripts/: model_probe.py  probe_qwen35.jsonl
supercoder/: __init__.py  abort_controller.py  autocomplete.py  checkpoint.py  config.py  logging.py  main.py  mdstream.py  repl.py  rules_loader.py  setup_wizard.py  streaming_buffer.py
supercoder/agent/: __init__.py  agent_modes.py  coder_agent.py  prompts.py  tool_calling_prompts.py  tool_parser.py
supercoder/context/: __init__.py  session_manager.py  token_counter.py  window_manager.py
supercoder/llm/: __init__.py  base.py  openai_client.py
supercoder/repomap/: __init__.py  map.py  tag_extractor.py
supercoder/tools/: __init__.py  base.py  code_edit.py  code_search.py  command_exec.py  file_read.py  project_structure.py
supercoder/utils/: __init__.py  atomic_writer.py
tests/: test_agent_with_repomap.py  test_cli_modernization.py  test_config_loading.py  test_context.py  test_native_tools.py  test_repomap.py  test_rules_loader.py  test_session_manager.py  test_streaming_buffer.py  test_streaming_display.py  test_tool_parser.py  test_tools.py
