[project]
name = "supercoder"
version = "0.2.3"
description = "AI Coding Assistant for the Terminal"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SuperCoder Team"}
]
keywords = ["ai", "coding", "assistant", "llm", "cli"]
dependencies = [
    "openai>=2.13.0",
    "click>=8.3.1",
    "rich>=14.2.0",
    "prompt-toolkit>=3.0.52",
    "networkx>=3.6.1",
    "tree-sitter-languages>=1.10.2",
    "pyyaml>=6.0.0",
    "pygments>=2.17.0",
    "tiktoken>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/Mage212/supercoder"
Repository = "https://github.com/Mage212/supercoder"
Issues = "https://github.com/Mage212/supercoder/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
local = [
    "llama-cpp-python>=0.2.0",
]
full = []

[project.scripts]
supercoder = "supercoder.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
