[project]
name = "supercoder"
version = "0.2.9"
description = "AI Coding Assistant for the Terminal"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SuperCoder Team"}
]
keywords = ["ai", "coding", "assistant", "llm", "cli"]
dependencies = [
    "openai>=2.13.0",
    "click>=8.3.1",
    "rich>=14.2.0",
    "prompt-toolkit>=3.0.52",
    "networkx>=3.6.1",
    "tree-sitter-languages>=1.10.2",
    "pyyaml>=6.0.0",
    "pygments>=2.17.0",
    "tiktoken>=0.12.0",
    "questionary>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Mage212/supercoder"
Repository = "https://github.com/Mage212/supercoder"
Issues = "https://github.com/Mage212/supercoder/issues"

[project.optional-dependencies]
local = [
    "llama-cpp-python>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.0",
]

[project.scripts]
supercoder = "supercoder.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C90",  # McCabe complexity
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (formatter handles it)
    "B008",   # do not perform function calls in default arguments (Click pattern)
    "SIM117", # use single with statement (readability preference)
    "C901",   # function too complex (complex functions are correct and intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingModuleSource = false
exclude = ["tests/**", ".venv/**", "venv/**", "scripts/**", "build/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
